@@ -1,4 +1,4 @@
 # Makefile.am
 
-sysconfdir = @sysconfdir@
-sysconf_DATA = baalued.conf
+sysconfdir = @sysconfdir@/baalued
+sysconf_DATA = baalued_node.conf baalued_master.conf baalued_control.conf
