@@ -1,0 +1,3 @@
+#!/bin/sh
+[ -d /var/log/baalued ] || mkdir -p /var/log/baalued
+exec chpst -u root:users svlogd -t /var/log/baalued
