@@ -1,0 +1,2 @@
+#!/bin/sh
+exec baalued -f /etc/baalued/baalued.conf 2>&1
