@@ -1,0 +1,15 @@
+#
+# baalued --- configuration
+#
+
+program_name = "baalued";
+run_as_daemon = "false";
+
+// inet server for device managment
+start_inet_server = "true";
+// uds server as entry point for (xfce)-panel applications
+start_local_server = "false";
+// the can server -> not yet
+start_can_server = "false";
+// control time triggert environment -> not yet
+start_ttenv_server = "false";
